--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Superheroes</title>
+    <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Ubuntu:wght@400;500;700&display=swap"
+    rel="stylesheet">
+    <title>Sami Heroes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
